# extensive-sim-game

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  blog_impala_v4.html  concepts.html  concepts_architecture.html  concepts_attention.html  concepts_foundations.html  concepts_math.html  concepts_rl_algorithms.html  concepts_rl_foundations.html  game_start.sh  index.html
crates/abilities_runtime/: Cargo.toml  build.rs
crates/abilities_runtime/src/: lib.rs
crates/ability-vae/: Cargo.toml
crates/ability-vae/src/: ability_generator.rs  context_encoder.rs  data.rs  diffusion.rs  grokfast.rs  guided_sample.rs  lib.rs  main.rs  model.rs  text_encoder.rs  tree_decoder.rs
crates/ability_operator/: Cargo.toml
crates/ability_operator/src/: data.rs  grokfast.rs  lib.rs  loss.rs  model.rs  train.rs
crates/auction_runtime/: Cargo.toml  build.rs
crates/auction_runtime/src/: lib.rs
crates/bartering_runtime/: Cargo.toml  build.rs
crates/bartering_runtime/src/: lib.rs
crates/boids_runtime/: Cargo.toml  build.rs
crates/boids_runtime/examples/: bench.rs
crates/boids_runtime/src/: lib.rs
crates/boss_fight_runtime/: Cargo.toml  build.rs
crates/boss_fight_runtime/src/: lib.rs
crates/combat-trainer/: Cargo.toml
crates/combat-trainer/src/: env.rs  main.rs  model.rs
crates/cooldown_probe_runtime/: Cargo.toml  build.rs
crates/cooldown_probe_runtime/src/: lib.rs
crates/crafting_diffusion_runtime/: Cargo.toml
crates/crafting_diffusion_runtime/src/: lib.rs
crates/crafting_diffusion_runtime/tests/: sim_parses.rs
crates/crowd_navigation_runtime/: Cargo.toml  build.rs
crates/crowd_navigation_runtime/examples/: smoke.rs
crates/crowd_navigation_runtime/src/: lib.rs
crates/diplomacy_probe_runtime/: Cargo.toml  build.rs
crates/diplomacy_probe_runtime/src/: lib.rs
crates/disease_spread_runtime/: Cargo.toml
crates/disease_spread_runtime/src/: lib.rs
crates/dsl_compiler/: Cargo.toml
crates/dsl_compiler/src/: ability_lower.rs  ability_registry.rs  ast.rs  emit_alive_pack_wgsl.rs  emit_append_events_wgsl.rs  emit_apply_actions_wgsl.rs  emit_backend.rs  emit_binding_sources.rs  emit_cascade_register.rs  emit_config.rs  emit_entity.rs  emit_enum.rs  emit_external_buffers.rs  emit_kernel_index.rs  emit_kernel_module.rs  emit_mask.rs  emit_mask_fill.rs  emit_mask_kernel.rs  emit_mask_wgsl.rs  emit_megakernel.rs  emit_movement_kernel.rs  emit_movement_wgsl.rs  emit_physics.rs  emit_physics_wgsl.rs  emit_pick_ability_kernel.rs  emit_pingpong_context.rs  emit_pool.rs  emit_python.rs  emit_resident_context.rs  emit_runtime_prelude_wgsl.rs  emit_rust.rs  emit_schedule.rs  emit_scoring.rs  emit_scoring_kernel.rs  emit_scoring_wgsl.rs  emit_seed_indirect_wgsl.rs  emit_sim_cfg.rs  emit_spatial_kernel.rs  emit_step.rs  emit_transient_handles.rs  (+13 more)
crates/dsl_compiler/tests/: ability_lower.rs  ability_lower_wave_1_1.rs  ability_lower_wave_1_2.rs  ability_lower_wave_1_3.rs  ability_lower_wave_1_4.rs  ability_lower_wave_1_5.rs  ability_registry.rs  annotation_per_entity_ring.rs  annotation_symmetric_pair_topk.rs  boids_cg_emit.rs  boids_cg_lowering.rs  boids_smoke.rs  cpu_only_wgsl_skip.rs  emit_binding_sources_smoke.rs  emit_e2e.rs  emit_kernel_index_smoke.rs  emit_mask_kernel_smoke.rs  emit_megakernel_smoke.rs  emit_movement_kernel_smoke.rs  emit_physics_smoke.rs  emit_pick_ability_kernel_smoke.rs  emit_schedule_smoke.rs  emit_scoring_kernel_smoke.rs  emit_spatial_smoke.rs  emit_view_fold_smoke.rs  golden.rs  ir_golden.rs  lower_full_compilation.rs  parser_belief.rs  parser_belief_read.rs  parser_spatial_query.rs  per_ability_row.rs  physics_gpu_validator.rs  physics_wgsl_coverage.rs  physics_wgsl_dump.rs  predator_prey_chronicle_death.rs  predator_prey_decay.rs  predator_prey_event_layout.rs  predator_prey_invariant.rs  predator_prey_non_replayable.rs  (+11 more)
crates/duel_1v1_runtime/: Cargo.toml  build.rs
crates/duel_1v1_runtime/src/: lib.rs
crates/duel_25v25_runtime/: Cargo.toml  build.rs
crates/duel_25v25_runtime/src/: lib.rs
crates/duel_abilities_runtime/: Cargo.toml  build.rs
crates/duel_abilities_runtime/src/: binding_check.rs  lib.rs
crates/dungeon_crawl_runtime/: Cargo.toml  build.rs
crates/dungeon_crawl_runtime/src/: lib.rs
crates/ecosystem_runtime/: Cargo.toml  build.rs
crates/ecosystem_runtime/src/: lib.rs
crates/engine/: .schema_hash  Cargo.toml  build.rs
crates/engine/benches/: RESULTS.md  tick_throughput.rs
crates/engine/examples/: hill_fight.rs  print_schema_hash.rs
crates/engine/fuzz/: .gitignore  Cargo.toml
crates/engine/src/: backend.rs  channel.rs  chronicle.rs  creature.rs  engagement.rs  ids.rs  lib.rs  mask.rs  pool.rs  rng.rs  schema_hash.rs  scratch.rs  sim_trait.rs  spatial.rs  step.rs  terrain.rs  trajectory.rs
crates/engine/tests/: ability_program_shape.rs  ability_registry.rs  acceptance.rs  acceptance_mixed_actions.rs  acceptance_plan2_deterministic.rs  acceptance_plan3.rs  action_attack_kill.rs  action_cast_emits_agentcast.rs  action_emit_only.rs  action_flee.rs  action_needs.rs  action_sum.rs  aggregate_pool.rs  announce_audience.rs  announce_channel_gating.rs  announce_overhear.rs  backend_full_tick_parity.rs  backend_mask_parity.rs  bounded_map.rs  cascade_bounded.rs  cascade_lanes.rs  cascade_register_dispatch.rs  cast_handler_damage.rs  cast_handler_gold.rs  cast_handler_heal.rs  cast_handler_recursive.rs  cast_handler_shield_absorb.rs  cast_handler_slow.rs  cast_handler_standing.rs  cast_handler_stun.rs  cast_recursion_depth.rs  channel_filter.rs  combat_foundation_2v2_cast.rs  combat_foundation_meteor_swarm.rs  combat_foundation_tank_wall.rs  (+96 more)
crates/engine_gpu/: Cargo.toml
crates/engine_gpu_rules/: .schema_hash  Cargo.toml  build.rs
crates/engine_rules/: Cargo.toml  build.rs
crates/flocking_skirmish_runtime/: Cargo.toml  build.rs
crates/foraging_real_runtime/: Cargo.toml  build.rs
crates/foraging_runtime/: Cargo.toml  build.rs
crates/headless_campaign/: Cargo.toml
crates/mass_battle_100v100_runtime/: Cargo.toml  build.rs
crates/megaswarm_10000_runtime/: Cargo.toml  build.rs
(+3755 files in other folders)
