[workspace]
members = ["crates/bartering_runtime", "crates/boids_runtime", "crates/crowd_navigation_runtime", "crates/dsl_ast", "crates/dsl_compiler", "crates/engine", "crates/engine_data", "crates/engine_gpu_rules", "crates/particle_collision_runtime", "crates/predator_prey_runtime", "crates/sim_app", "crates/swarm_storm_runtime", "crates/target_chaser_runtime"]
exclude = ["crates/world_sim_bench", "crates/ability_operator", "crates/ability-vae", "crates/combat-trainer"]
resolver = "2"

# Phase 7 wolf-sim wipe (2026-05-02): the heaviest deletes — engine_gpu,
# engine_rules, viz, tactical_sim, xtask, src/, plus all legacy emitters
# under crates/dsl_compiler/src/emit_*.rs — stayed gone. `engine` and
# `engine_data` were restored on 2026-05-02 (commit TBD): they hold the
# general data-structure infrastructure (Agent SoA, event ring, snapshot,
# spatial hash, RNG) the new minimum DSL fixture needs to actually run.
# They are coupled to the wolf-sim type set today (CreatureType,
# wolf-flavored Event variants); trim toward the new fixture as the
# compiler-emitted output catches up.
