[package]
name = "ability_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.20", features = ["wgpu", "fusion", "autotune", "autodiff", "train", "ndarray", "tch"] }
ndarray = "0.16"
ndarray-npy = { version = "0.9", features = ["npz"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tch = "0.22"

[[bin]]
name = "train_operator"
path = "src/bin/train.rs"
