[package]
name = "cooldown_probe_runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Per-fixture runtime crate for `assets/sim/cooldown_probe.sim` —
# follow-up probe to abilities_probe (see Gap #4 in
# `docs/superpowers/notes/2026-05-04-abilities_probe.md`). Drives the
# per-agent `cooldown_next_ready_tick` SoA + `world.tick` preamble +
# `if (tick >= ready_at) { emit }` gating end-to-end through the GPU
# pipeline. Mirrors `verb_probe_runtime` shape: build.rs lowers the
# .sim through the DSL compiler into `OUT_DIR/generated.rs`;
# src/lib.rs owns the GPU context, per-buffer storage, kernel cache,
# and per-tick dispatch chain.

[dependencies]
engine = { path = "../engine" }
wgpu = "=26.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
dsl_compiler = { path = "../dsl_compiler" }

[build-dependencies]
dsl_ast = { path = "../dsl_ast" }
dsl_compiler = { path = "../dsl_compiler" }
