[package]
name = "dsl_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
dsl_ast = { path = "../dsl_ast" }
# `engine` provides the `AbilityProgram` / `EffectOp` / `Gate` / `Area` /
# `AbilityHint` runtime types that `ability_lower` targets (Wave 1.6 of
# the unified `.ability` DSL — `docs/spec/ability_dsl_unified.md`).
# Direction: `dsl_compiler -> engine` only; `engine` does not depend on
# `dsl_compiler`, so no cycle.
engine = { path = "../engine" }
smallvec = "1.13"
winnow = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
# WGSL parse/validate for emit_view_wgsl / emit_scoring_wgsl tests.
# Pinned to match engine_gpu's `=26.0.0` so the same WGSL dialect
# stays authoritative across the DSL + runtime sides.
naga = { version = "=26.0.0", features = ["wgsl-in"] }
