[package]
name = "duel_25v25_runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Per-fixture runtime crate for `assets/sim/duel_25v25.sim` — first
# SCALE-UP fixture (25 Red vs 25 Blue squad scuffle). Mirrors
# `duel_1v1_runtime` for the chronicle damage path AND
# `particle_collision_runtime` for the spatial-grid scaffolding;
# combines both into one runtime that scans neighbourhoods per
# tick and applies per-agent damage via `agents.set_hp`. Sidesteps
# the duel_1v1 verb-cascade Gap W (PerPair `mask_k=1u` placeholder)
# by doing target finding via spatial body-form physics.
#
# build.rs lowers the .sim through the DSL compiler into
# `OUT_DIR/generated.rs`; src/lib.rs owns the GPU context, per-buffer
# storage, kernel cache, and per-tick dispatch chain.

[dependencies]
engine = { path = "../engine" }
wgpu = "=26.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
dsl_compiler = { path = "../dsl_compiler" }

[build-dependencies]
dsl_ast = { path = "../dsl_ast" }
dsl_compiler = { path = "../dsl_compiler" }
