[package]
name = "dungeon_crawl_runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Per-fixture runtime crate for `assets/sim/dungeon_crawl.sim` — the
# 20th real sim and the FIRST with multi-encounter sequencing. The DSL
# is the same Strike/Spell/Heal verb cascade as duel_1v1; this crate
# adds CPU-side encounter pacing — when all enemies in the current
# room are dead, the runtime spawns the next room's enemies by
# overwriting the GPU agent_alive + agent_hp buffers.

[dependencies]
engine = { path = "../engine" }
wgpu = "=26.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
dsl_compiler = { path = "../dsl_compiler" }

[build-dependencies]
dsl_ast = { path = "../dsl_ast" }
dsl_compiler = { path = "../dsl_compiler" }
