[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29"
smallvec = "1.13"
ahash = "0.8"
rustc-hash = "2.1"
safetensors = "0.4"
rayon = "1.10"
sha2 = "0.10"
contracts = "0.6"

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
proptest = "1.5"
dhat = "0.3"
criterion = "0.5"
hex = "0.4"

[[bench]]
name = "tick_throughput"
harness = false

[features]
default = []
dhat-heap = []
# Elide all contracts::{invariant, requires, ensures} attributes. Useful for
# benchmarking when the debug-build contract overhead is under measurement.
# When this feature is on, the engine behaves as if compiled in release mode
# w.r.t. contract checks.
no-contracts = ["contracts/disable_contracts"]
