[package]
name = "engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# engine_data retained as a regular dep ONLY for chronicle.rs until Plan B2
# migrates chronicle to emitted DSL (Spec B' §4.2). Drop this line in Task B2.
engine_data = { path = "../engine_data" }
glam = "0.29"
smallvec = "1.13"
ahash = "0.8"
rustc-hash = "2.1"
safetensors = "0.4"
rayon = "1.10"
sha2 = "0.10"
contracts = "0.6"
# wgpu pinned to =26.0.1; matches naga 26.0.0 used by dsl_compiler's
# WGSL emit + validation. Pulled into engine because engine owns the
# platform layer (GpuContext, Kernel trait, BGL helpers in
# `engine::gpu`); the SDL-style split has the engine carrying wgpu so
# downstream per-fixture runtime crates only depend on engine.
wgpu = "=26.0.1"
# pollster gives a sync `block_on` so non-async callers (e.g.,
# `boids_runtime::BoidsState::new`) can construct GpuContext without
# pulling in a full async runtime.
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
# DSL IR interpreter — optional; only pulled in under `interpreted-rules`.
dsl_ast = { path = "../dsl_ast", optional = true }

[dev-dependencies]
trybuild = "1"
engine_data = { path = "../engine_data" }
# engine_rules + engine_gpu were deleted in the Phase 7 wolf-sim wipe
# (2026-05-02). Tests that depended on them have been removed alongside
# the deletes; surviving engine tests use only `engine` + `engine_data`.
insta = { version = "1.41", features = ["yaml"] }
proptest = "1.5"
dhat = "0.3"
criterion = "0.5"
hex = "0.4"
# Wave 1.9 integration test: pack the Wave 1 corpus through the full
# parse + lower + registry-build + pack pipeline. Dev-only — `engine`
# itself does not depend on the DSL crates (those depend on `engine`).
# The cycle is `engine[dev] -> dsl_compiler -> engine[normal]`, which
# Cargo allows because dev-deps don't propagate to non-test builds.
dsl_ast = { path = "../dsl_ast" }
dsl_compiler = { path = "../dsl_compiler" }

[[bench]]
name = "tick_throughput"
harness = false

[features]
default = []
dhat-heap = []
# Enables the Theory-of-Mind subsystem: cold_beliefs SoA field, belief-decay
# Phase 5b, BeliefObserve cascade rules, and belief-predicate scoring arms.
# Zero cost when off — the field and all call sites are removed by the compiler.
theory-of-mind = []
# Elide all contracts::{invariant, requires, ensures} attributes. Useful for
# benchmarking when the debug-build contract overhead is under measurement.
# When this feature is on, the engine behaves as if compiled in release mode
# w.r.t. contract checks.
no-contracts = ["contracts/disable_contracts"]
# Route mask, scoring, cascade, and view-fold dispatch through the DSL IR
# interpreter (dsl_ast) instead of the compiler-emitted generated code.
# Default build uses the compiled path as before; this feature enables the
# dev-loop promise of "edit .sim, see result without cargo rebuild."
# Parity gate: `cargo test -p engine --features interpreted-rules` must
# produce byte-identical replayable_sha256 against the committed baseline.
interpreted-rules = ["dep:dsl_ast"]
